After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 604834 - ctr+w in presentation mode gives "white screen"
ctr+w in presentation mode gives "white screen"
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
2.28.x
Other Linux
: Normal minor
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-12-17 12:56 UTC by Jan Rüegg
Modified: 2014-03-17 12:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
EvViewPresentation: Exit from Presentation Mode (F5) by pressing Ctrl+W (999 bytes, patch)
2014-03-16 23:03 UTC, Andrey Kaminsky
reviewed Details | Review

Description Jan Rüegg 2009-12-17 12:56:18 UTC
When I open some PDF in evince (2.28.2) and hit ctrl+w, then it closes the document, as it should.

But while in "Presentation" mode (F5), hitting ctrl+w leads toe a white screen. Pushing any button then makes the white simply vanish and gets you back to the presentation.

What would be expected is that also in Presentation mode, ctrl+w should close the document.
Comment 1 Fabio Durán Verdugo 2009-12-17 13:55:27 UTC
Yes I can confirm this in Ubuntu 9.10 with Evince Version 2.28.1
Comment 2 Fabio Durán Verdugo 2009-12-17 13:57:42 UTC
I think not should close the document, ctrl+w should close the Presentation Mode.
Comment 3 Carlos Garcia Campos 2010-01-04 10:45:03 UTC
Fixed in git master. Thanks for reporting.
Comment 4 Sebastien Bacher 2014-03-10 16:00:04 UTC
that bug seems to still be there with 3.10.3, reopening (see https://bugs.launchpad.net/ubuntu/+source/evince/+bug/1289581)
Comment 5 Germán Poo-Caamaño 2014-03-10 17:03:07 UTC
Reproducible with git master.
Comment 6 Andrey Kaminsky 2014-03-16 23:03:18 UTC
Created attachment 272100 [details] [review]
EvViewPresentation: Exit from Presentation Mode (F5) by pressing Ctrl+W
Comment 7 Carlos Garcia Campos 2014-03-17 12:37:57 UTC
Review of attachment 272100 [details] [review]:

Thanks for the patch, but this is not correct.

::: libview/ev-view-presentation.c
@@ +1128,3 @@
 	case GDK_KEY_w:
 	case GDK_KEY_W:
+		if (event->state & GDK_CONTROL_MASK) {

I think we should actually propagate any key event when the state is not 0.

@@ +1129,3 @@
 	case GDK_KEY_W:
+		if (event->state & GDK_CONTROL_MASK) {
+			g_signal_emit_by_name(widget, "finished");

This is not the way to finish a widget, you should call gtk_widget_destroy instead, but in this case, CTRL+W is already handled by the window, not by the view itself.
Comment 8 Carlos Garcia Campos 2014-03-17 12:41:40 UTC
I've just pushed a fix for this myself, because I'm going to release today.