ev-view-presentation: Propagate unhandled key events

This was preventing shortcuts like CTRL+w from working.

https://bugzilla.gnome.org/show_bug.cgi?id=604834