libview/ev-view-presentation.c
@@ -1114,6 +1114,9 @@ ev_view_presentation_key_press_event (GtkWidget   *widget,
 	if (pview->state == EV_PRESENTATION_END)
                 return gtk_bindings_activate_event (G_OBJECT (widget), event);
 
+        if (event->state != 0)
+                return gtk_bindings_activate_event (G_OBJECT (widget), event);
+
 	switch (event->keyval) {
 	case GDK_KEY_b:
 	case GDK_KEY_B:
